apps/base/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      name: nextcloud
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:30.0.4-apache
          name: nextcloud
          volumeMounts:
            - name: data
              mountPath: /var/www/html
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-pvc-data
