apps/base/nextcloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: https
    - port: 443
      targetPort: 443
